# ibc-bridge-wasm

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.build.yml  docker-compose.yml  go.mod  go.sum  ibc.md  rust-toolchain.toml
.github/workflows/: cov.yml
app/: app.go  genesis.go
cmd/config/: config.go
contracts/cw-ics20-latest/: Cargo.toml
contracts/cw-ics20-latest/artifacts/: cw-ics20-latest.wasm  oraiswap-mixed-router.wasm  oraiswap-v3.wasm  skip-api-entry-point.wasm  skip-api-ibc-adapter-ibc-hooks.wasm  skip-api-ibc-adapter-orai-ibc-wasm.wasm  skip-api-swap-adapter-oraidex.wasm
contracts/cw-ics20-latest/src/: contract.rs  error.rs  ibc.rs  ibc_hooks.rs  ibc_hooks_test.rs  ibc_tests.rs  integration_tests.rs  lib.rs  migrations.rs  msg.rs  query_helper.rs  state.rs  test_helpers.rs
contracts/cw-ics20-latest/src/testing/: ibc_hooks_test.rs  ibc_tests.rs  integration_tests.rs  mod.rs  test_helpers.rs
contracts/cw20-base/artifacts/: cw20-base.wasm
contracts/cw20-base/src/: state.rs
contracts/cw20-ics20/: Cargo.toml
contracts/cw20-ics20/artifacts/: cw20-ics20.wasm
contracts/cw20-ics20/schema/: init_msg.json
contracts/cw20-ics20/src/: contract.rs  ibc.rs  msg.rs  state.rs  test_helpers.rs
contracts/ibc-reflect/: Cargo.toml
contracts/ibc-reflect/artifacts/: ibc-reflect.wasm
contracts/ibc-reflect/src/: msg.rs  state.rs
contracts/receiver-contract/: Cargo.toml
contracts/receiver-contract/artifacts/: receiver-contract.wasm
contracts/receiver-contract/src/: contract.rs  error.rs  lib.rs
data/feat/ibc-hooks/: coverage.xml
data/feat/mint-burn-mechanism/: coverage.xml
data/feat/oraiswap-v3/: coverage.xml
data/feat/token-factory/: coverage.xml
data/fix/memo-is-receiver-addr/: coverage.xml
data/master/: coverage.xml
gravity-dex-backend/: .gitignore  README.md  go.mod  go.sum
gravity-dex-backend/cmd/account-importer/: main.go
gravity-dex-backend/cmd/accumulator/: accumulator.go  blockdata.go  cache.go  cmd.go  data.go  event.go  main.go  server.go
gravity-dex-backend/cmd/banner-importer/: main.go
gravity-dex-backend/cmd/gdex/: main.go
gravity-dex-backend/cmd/gdex/cmd/: dumper.go  root.go  server.go  transformer.go
gravity-dex-backend/config/: config.go  dumper.go  server.go  transformer.go
gravity-dex-backend/schema/: cache.go  store.go  store_test.go  web.go
gravity-dex-backend/server/: background.go  cache.go  handlers.go  server.go
gravity-dex-backend/service/price/: cache.go  coinmarketcap.go  config.go  cybernode.go  fixer.go  price.go  random.go
gravity-dex-backend/service/pricetable/: config.go  pricetable.go  pricetable_test.go
gravity-dex-backend/service/score/: config.go  score.go  scoreboard.go
gravity-dex-backend/service/store/: config.go  store.go  store_test.go
gravity-dex-backend/transformer/: blockdata.go  event.go  state.go  transformer.go
gravity-dex-backend/util/: util.go
ibc-proxy/: config.json  config.toml  get-account.js  index.js  package.json  send.js
ibc-proxy/.ibc-setup/: app.yaml  registry.yaml
ibc-proxy/accounts/: Earth.txt  Mars.txt  earth.txt  mars.txt
ibc-proxy/oraicli/: index.js
ibc-proxy/oraicli/cmd/account/: index.js
ibc-proxy/oraicli/cmd/account/cmd/: balance.js  create.js
ibc-proxy/oraicli/cmd/ibc/: index.js
ibc-proxy/oraicli/cmd/ibc/cmd/: transfer.js
ibc-proxy/oraicli/cmd/send/: index.js
ibc-proxy/oraicli/cmd/wasm/: index.js
ibc-proxy/oraicli/cmd/wasm/cmd/: deploy.js  execute.js  query.js
nft-market/: .env  package.json
nft-market/public/: index.html
nft-market/src/: App.js  AvatarPlaceholder.js  Header.js  Photo.css  Photo.js  data.json  index.css  index.js  util.js  wasm.js
proto/: universal-swap-memo.proto
scripts/: build_contract.sh  deploy_contract.sh  migrate_contract.sh  setup_genesis.sh
simulate-tests/: .env.example  README.md  bridge-contract.spec.ts  bridge-with-mint-burn.spec.ts  common.ts  package.json  tsconfig.json
simulate-tests/contracts-sdk/: CwIcs20Latest.client.ts  CwIcs20Latest.types.ts  EntryPoint.client.ts  EntryPoint.types.ts  IbcHooks.client.ts  OraiIbcWasm.client.ts  OraiIbcWasm.types.ts  Oraidex.client.ts  Oraidex.types.ts  OraiswapMixedRouter.client.ts  OraiswapMixedRouter.types.ts  index.ts  types.ts
smart-contracts/marketplace/artifacts/: marketplace.wasm
smart-contracts/marketplace/artifacts/contract/ow20/: ow20.wasm
smart-contracts/marketplace/artifacts/contract/ow721/: ow721.wasm
smart-contracts/marketplace/artifacts/schema/: buy_nft.json  contract_info_response.json  handle_msg.json  offerings_response.json  query_msg.json  query_offerings_result.json  sell_nft.json
smart-contracts/marketplace/src/: contract.rs  msg.rs
tests/: README.md  deploy.js  transfer-cw20.js  utils.js
x/liquidity/: abci.go  doc.go  genesis.go  genesis_test.go  handler.go  handler_test.go  module.go  module_test.go
x/liquidity/client/cli/: cli_test.go  query.go  tx.go
x/liquidity/client/testutil/: cli_helpers.go
x/liquidity/keeper/: batch.go  batch_test.go  common_test.go  genesis.go  genesis_test.go  grpc_query.go  grpc_query_test.go  invariants.go  invariants_test.go  keeper.go  keeper_test.go  liquidity_pool.go  liquidity_pool_test.go  msg_server.go  msg_server_test.go  querier.go  querier_test.go  store.go  store_test.go  swap.go  swap_test.go
x/liquidity/params/: encoding.go  weights.go
x/liquidity/simulation/: decoder.go  decoder_test.go  genesis.go  genesis_test.go  operations.go  operations_test.go  operations_utils.go  params.go  params_test.go
x/liquidity/types/: genesis_test.go  keys_test.go  liquidity_pool_test.go  msgs_test.go  params_test.go  swap_test.go  tx.pb.go  utils.go  utils_test.go
