[workspace]
members = ["contracts/*", "packages/*"]

resolver = "2"

[workspace.dependencies]
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "24c138c" }
oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "f2c1cec" }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-controllers = { version = "1.0.1" }
cw-utils = "0.16.0"
cw20-ics20-msg = { path = "./packages/cw20-ics20-msg" }
cosmwasm-schema = { version = "1.2.8" }
cosmwasm-std = { version = "1.2.8", default-features = false }
cosmwasm-vm = { version = "1.2.8" }
# osmosis-test-tube = { git = "https://github.com/oraichain/test-tube.git", rev = "354d580" }
prost = "0.13.1"  # or the latest version

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
