[workspace]
members = ["contracts/*", "packages/*"]

resolver = "2"

[workspace.dependencies]
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "33a262f" }
oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "15fb72aea4bfd123b14116472c6fb467f297a6f9" }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-controllers = { version = "1.0.1" }
cw-utils = "0.16.0"
cw20-ics20-msg = { path = "./packages/cw20-ics20-msg" }
cosmwasm-schema = { version = "1.5.0" }
cosmwasm-std = { version = "1.5.0", default-features = false }
cosmwasm-vm = { version = "1.5.0" }
prost = "0.13.1"                                                                                            # or the latest version

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
