[package]
name = "cw-ics20-latest"
version = "1.0.8"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>, Oraichain Labs"]
edition = "2021"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "Apache-2.0"
repository = "https://github.com/oraichain/ibc-bridge-wasm"
homepage = "https://orai.io"
documentation = "https://docs.orai.io"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-ics20-msg = { workspace = true }
oraiswap = { workspace = true }
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
thiserror = { version = "1.0.23" }
sha256 = "=1.1.0"
skip = { workspace = true }

[dev-dependencies]
cosmwasm-vm = { workspace = true }
# osmosis-test-tube = { workspace = true }
cosmwasm-testing-util = { workspace = true }
anybuf = "0.3.0"
