[package]
name = "receiver-contract"
version = "0.16.0"
authors = ["Oraichain Labs"]
edition = "2021"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "Apache-2.0"
repository = "https://github.com/Oraichain/ibc-bridge-wasm"
homepage = "https://orai.io"
documentation = "https://docs.orai.io"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw20-ics20-msg = { path = "../../packages/cw20-ics20-msg", version = "0.0.1" }
cw-utils = "0.16.0"
cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
cw-storage-plus = "0.16.0"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
